# w5-d5-rag-limitations

./: Chinook.db  RAG_vs_SQL_Agent_Comparison.md  performance_comparison.py  rag_system.py
quick-commerce-deal/: .env.example  README.md  pyproject.toml  quick_commerce.db  requirements.txt  run.py  setup.py
quick-commerce-deal-manual/: README.md  env_example.txt  main.py  requirements.txt
quick-commerce-deal-manual/db/: blinkit.db  instamart.db  zepto.db
quick-commerce-deal-manual/scripts/: add_data.py  apply_schema.py  clean_and_apply_schema.py
quick-commerce-deal/app/: __init__.py  config.py  main.py
quick-commerce-deal/app/agents/: __init__.py  query_planner.py  sql_agent.py  table_selector.py
quick-commerce-deal/app/api/: __init__.py  routes.py
quick-commerce-deal/app/data/: __init__.py  generate_sample_data.py
quick-commerce-deal/app/database/: __init__.py  database.py  init_db.py  models.py
quick-commerce-deal/app/utils/: __init__.py
rag-vs-sql-agent/: README.md  requirements.txt  sql-agent.ipynb  sql_agent_enhanced.py  test_questions.py
