[tool.poetry]
name = "quick-commerce-deals"
version = "0.1.0"
description = "Price comparison platform for quick commerce apps with AI-powered SQL agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
langchain = "^0.0.350"
langchain-community = "^0.0.8"
langchain-openai = "^0.0.2"
openai = "^1.3.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
slowapi = "^0.1.9"
redis = "^5.0.1"
pandas = "^2.1.4"
numpy = "^1.24.3"
faker = "^20.1.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 